deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulfriend-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8501
  selector:
    app: soulfriend
  type: LoadBalancer
